// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorDetailsPanel rendering renders expected elements when showButtons is false 1`] = `
<aside
  aria-labelledby="detailsPanelTitle"
  className="EditorDetailsPanel"
  id="test"
>
  <div
    className="EditorDetailsPanel__header"
  >
    <h2
      className="EditorDetailsPanel__title"
      id="detailsPanelTitle"
    >
      Test
    </h2>
    <IconButton
      aria-label="Close"
      className="EditorDetailsPanel__close"
      icon={
        {
          "icon": [],
          "iconName": "xmark-thin",
        }
      }
      id="closeDetailsPanelBtn"
      size="large"
      tooltipPlacement="left"
      tooltipText="Close"
      type="ghost"
    />
  </div>
  <React.Fragment>
    cloneWithClassName
  </React.Fragment>
</aside>
`;

exports[`EditorDetailsPanel rendering renders expected elements when showButtons is true 1`] = `
<aside
  aria-labelledby="detailsPanelTitle"
  className="EditorDetailsPanel"
  id="test"
>
  <div
    className="EditorDetailsPanel__header"
  >
    <h2
      className="EditorDetailsPanel__title"
      id="detailsPanelTitle"
    >
      Test
    </h2>
    <IconButton
      aria-label="Close"
      className="EditorDetailsPanel__close"
      icon={
        {
          "icon": [],
          "iconName": "xmark-thin",
        }
      }
      id="closeDetailsPanelBtn"
      size="large"
      tooltipPlacement="left"
      tooltipText="Close"
      type="ghost"
    />
  </div>
  <React.Fragment>
    cloneWithClassName
    <DefaultDetailsButtons
      className="EditorDetailsPanel__buttons"
      disableDelete="Disable Delete"
      disableEdit="Disable Edit"
      item={
        {
          "name": "Test",
        }
      }
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
  </React.Fragment>
</aside>
`;

exports[`EditorDetailsPanel rendering renders expected elements with two children 1`] = `
<aside
  aria-labelledby="detailsPanelTitle"
  className="EditorDetailsPanel"
  id="test"
>
  <div
    className="EditorDetailsPanel__header"
  >
    <h2
      className="EditorDetailsPanel__title"
      id="detailsPanelTitle"
    >
      Test
    </h2>
    <IconButton
      aria-label="Close"
      className="EditorDetailsPanel__close"
      icon={
        {
          "icon": [],
          "iconName": "xmark-thin",
        }
      }
      id="closeDetailsPanelBtn"
      size="large"
      tooltipPlacement="left"
      tooltipText="Close"
      type="ghost"
    />
  </div>
  <React.Fragment>
    cloneWithClassName
    cloneWithClassName
  </React.Fragment>
</aside>
`;

exports[`EditorDetailsPanel rendering renders expected elements with two children when second child is null 1`] = `
<aside
  aria-labelledby="detailsPanelTitle"
  className="EditorDetailsPanel"
  id="test"
>
  <div
    className="EditorDetailsPanel__header"
  >
    <h2
      className="EditorDetailsPanel__title"
      id="detailsPanelTitle"
    >
      Test
    </h2>
    <IconButton
      aria-label="Close"
      className="EditorDetailsPanel__close"
      icon={
        {
          "icon": [],
          "iconName": "xmark-thin",
        }
      }
      id="closeDetailsPanelBtn"
      size="large"
      tooltipPlacement="left"
      tooltipText="Close"
      type="ghost"
    />
  </div>
  <React.Fragment>
    cloneWithClassName
  </React.Fragment>
</aside>
`;
